# EnjoyTV

./: .gitattributes  README.md  build.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/fuj/enjoytv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: camera.json  location_map_pin.json  qrCode.aep  qr_code.json  xposed_init
app/src/main/cpp/: base_include.h  jx_ffmpeg_cmd_run.c  jx_ffmpeg_cmd_run.h  jx_ffmpeg_jni.cpp  jx_jni_handler.cpp  jx_log.cpp  jx_log.h  jx_media_muxer.cpp  jx_yuv_encode_h264.cpp  jx_yuv_encode_h264.h  native-lib.cpp
app/src/main/java/com/fuj/enjoytv/: EnjoyApp.java
app/src/main/java/com/fuj/enjoytv/activity/chat_dtl/: ChatDtlActivity.java  ChatDtlFragment.java  ChatDtlPresenter.java  IChatDtlContact.java
app/src/main/java/com/fuj/enjoytv/activity/login/: LoginActivity.java
app/src/main/java/com/fuj/enjoytv/activity/main/: MainActivity.java
app/src/main/java/com/fuj/enjoytv/activity/now/: INowPlayContact.java  KeyboardAssitant.java  NowPlayActivity.java  NowPlayChatAdapter.java  NowPlayChatFragment.java  NowPlayFragment.java  NowPlayPresenter.java
app/src/main/java/com/fuj/enjoytv/activity/qrcode/: IQRCodeContact.java  QRCodeActivity.java  QRCodeFragment.java  QRCodePresenter.java
app/src/main/java/com/fuj/enjoytv/activity/simulation_loc/: ISimulationLocContact.java  SimulationLocActivity.java  SimulationLocFragment.java  SimulationLocPresenter.java
app/src/main/java/com/fuj/enjoytv/activity/splash/: SplashActivity.java
app/src/main/java/com/fuj/enjoytv/activity/tv/: ITVDetContact.java  TVDetActivity.java  TVDetFragment.java  TVDetPresenter.java
app/src/main/java/com/fuj/enjoytv/activity/tv_play/: ITVPlayContact.java  TVPlayActivity.java  TVPlayFragment.java  TVPlayListFragment.java  TVPlayPlaylistAdapter.java  TVPlayPresenter.java  TVPlaySubscribeFragment.java  TVPlaySubscribeFragmentAdapter.java  TVPlayTabFragment.java  TVProgram.java  TabView.java  VerticalTabLayout.java  VerticalViewPager.java
app/src/main/java/com/fuj/enjoytv/activity/video/: IVideoContact.java  VideoActivity.java  VideoFragment.java  VideoPresenter.java
app/src/main/java/com/fuj/enjoytv/adapter/: ChatAdapter.java  FallsAdapter.java  MainLoopAdapter.java  MessageAdapter.java  NaviAdapter.java  NowAdapter.java  TVDetAdapter.java
app/src/main/java/com/fuj/enjoytv/anim/: AnimUtils.java  LayoutAnim.java
app/src/main/java/com/fuj/enjoytv/base/: BaseActivity.java  BaseFragment.java  IBasePresenter.java  IBaseView.java
app/src/main/java/com/fuj/enjoytv/camera/: AudioRecorder.java  BaseMediaBitrateConfig.java  CameraUtils.java  DeviceUtils.java  FFMpegUtils.java  FFmpegBridge.java  FileUtils.java  IMediaRecorder.java  MediaObject.java  MediaRecorderBase.java  MediaRecorderConfig.java  MediaRecorderNative.java  MediaThemeObject.java  StringUtils.java
app/src/main/java/com/fuj/enjoytv/hook/: EnjoyProvider.java  SimulationLoc.java
app/src/main/java/com/fuj/enjoytv/listener/: OnChatClickListener.java  OnControlPanelVisibilityChangeListener.java  OnPlayerBackListener.java  OnShowThumbnailListener.java
app/src/main/java/com/fuj/enjoytv/model/: ChatResult.java  CommResult.java  MainResult.java  MsgResult.java  NowResult.java  PlaylistResult.java  TVDetResult.java
app/src/main/java/com/fuj/enjoytv/qrcode/: AutoFocusCallback.java  CameraConfigurationManager.java  CameraManager.java  FlashlightManager.java  PlanarYUVLuminanceSource.java  PreviewCallback.java  ViewfinderView.java
app/src/main/java/com/fuj/enjoytv/tools/: DialogHelper.java
app/src/main/java/com/fuj/enjoytv/utils/: ActivityUtils.java  AppManager.java  BitmapUtils.java  Constant.java  DensityUtils.java  DisplayUtils.java  GeometryUtils.java  JsonUtils.java  LogUtils.java  PermissionUtils.java  PreferenceUtils.java  StringUtils.java  ToastUtils.java  ValidUtils.java
app/src/main/java/com/fuj/enjoytv/video/: AndroidMediaController.java  IMediaController.java  IRenderView.java  IjkVideoView.java  LayoutQuery.java  MeasureHelper.java  MediaUtils.java  NetworkUtils.java  PlayStateParams.java  PlayerView.java  StreamSelectAdapter.java  SurfaceRenderView.java  TextureRenderView.java  VideoijkBean.java
app/src/main/res/anim/: anim_alpha_enter.xml  anim_alpha_exit.xml  anim_trans_y_enter.xml  anim_trans_y_exit.xml  dialog_loading.xml
app/src/main/res/drawable/: bg_bullet.xml  bg_dialog_loading.xml  bg_drawable_radius.xml  bg_layout_rotate.xml  bg_loop.xml  bg_msg_btn_normal.xml  bg_msg_btn_press.xml  bg_splash_skip.xml  bg_subscribe_normal.xml  bg_subscribe_selected.xml  bg_text.xml  bg_title.xml  bg_toast.xml  bg_user_login.xml  bg_user_login_selected.xml  bg_video_btn.xml  ic_account_24.xml  ic_psw_24dp.xml  out_anim.xml  selector_camera.xml  selector_delete.xml  selector_edittext.xml  selector_flash_led.xml  selector_msg_btn.xml  selector_subscribe.xml  zoomin_seletor.xml  zoomout_seletor.xml
app/src/main/res/layout/: activity_comm.xml  activity_login.xml  activity_main.xml  activity_splash.xml  activity_toolbar.xml  content_main.xml  custom_zoom_ctrl.xml  dialog_loading.xml  fragment_layout.xml  fragment_tab.xml  includeview.xml  input_layout.xml  item_bullet.xml  item_chat.xml  item_chat_dtl.xml  item_chatlist.xml  item_det_tv.xml  item_fall.xml  item_navi.xml  item_now.xml  item_subscribe_playlist.xml  item_swipe_chatlist.xml  layout_progress.xml  simple_player_controlbar.xml  simple_player_topbar.xml  simple_player_touch_gestures.xml  title_chat.xml  title_layout.xml  title_now.xml  title_qrcode.xml  title_video.xml  view_chat_dtl.xml  view_loc.xml  view_now.xml  view_nowchat.xml  view_qrcode.xml  view_tab.xml  view_tv.xml  view_tv_det.xml  view_tv_play.xml  (+5 more)
app/src/main/res/mipmap-xxhdpi/: Thumbs.db
app/src/main/res/raw/: chatlist.json  main.json  msglist.json  now.json  playlist.json  tvdet.json
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-w820dp/: dimens.xml
app/src/test/java/com/fuj/enjoytv/: ExampleUnitTest.java
(+47 files in other folders)
